// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App when iframe is loaded should not render the loader 1`] = `
<App
  composeView={
    Object {
      "insertTextIntoBodyAtCursor": [MockFunction],
    }
  }
>
  <div
    className="container"
  >
    <iframe
      className="iframe"
      onLoad={[Function]}
      src="https://email-snippets.herokuapp.com"
    >
      Your browser does not support iframes.
    </iframe>
  </div>
</App>
`;

exports[`App while iframe is not loaded should render the loader 1`] = `
<App
  composeView={
    Object {
      "insertTextIntoBodyAtCursor": [MockFunction],
    }
  }
>
  <div
    className="container"
  >
    <div
      className="loader"
    />
    <iframe
      className="iframe"
      onLoad={[Function]}
      src="https://email-snippets.herokuapp.com"
    >
      Your browser does not support iframes.
    </iframe>
  </div>
</App>
`;
